<resources>
    <string name="app_name">coronavirus</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">CoronaVirus \'Covid-19\'</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cases_label">Total Cases</string>
    <string name="map_label">Cases Map</string>
    <string name="report_label">WHO Situation Report</string>
    <string name="news_label">News</string>
    <string name="menu_refresh">Refresh</string>
    <string name="error_message">Something Went Wrong</string>
    <string name="no_connection_message">Check your internet connection</string>
    <string name="image_description">News Image</string>
    <string name="ad_id_interstitial" translatable="false">ca-app-pub-7820301890422502/6530431676</string>
    <string name="ad_id_banner" translatable="false">ca-app-pub-7820301890422502/1413550959</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="question_1">Had A history of travel to the areas with presumed ongoing community transmission of COVID-19?</string>
    <string name="question_2">A close physical contact in the past 14 days prior to symptom onset with aconfirmed case of COVID-19?</string>
    <string name="question_3">Visit to or attended a healthcare facility where patients with confirmed COVID-19 were admitted</string>
    <string name="question_4">Working in a a healthcare facility that had Quarantine in the last two weeks</string>
    <string name="question_5">Clinical sign and Symptoms: Fever(T > 38)?</string>
    <string name="question_6">Clinical sign and Symptoms: Cough (new or worsening)?</string>
    <string name="question_7">Clinical sign and Symptoms: Shortness of breath (new or worsening)?</string>
    <string name="question_8">Clinical sign and Symptoms: Sore throat and/or runny nose?</string>
    <string name="question_9">Clinical sign and Symptoms: Nausea, vomiting and/or diarrhea?</string>
    <string name="question_10">Clinical sign and Symptoms: Chronic renal failure, CAD/heart failure?</string>
    <string name="result_3">You are OK!! We hope that anyone who develops symptoms that include coughing, runny nose, fever, and sore throat will self-quarantine for 14 days.\n To protect yourself in public places, please wash your hands frequently and intensively, and keep at least 2 meters from the surrounding people.</string>
    <string name="result_2">You must inform MD for assessment, COVID-19 testing should be done only according to case definition, go directly to the emergency department, or visit clinics. \n Please do a self-quarantine until the results of your analyses become available. \n Self-isolation means not going to public places, staying at home and not meeting visitors.\n Do not share personal items such as dishes, utensils, and towels, and wash your hands occasionally.</string>
    <string name="result_1">You should inform your MD for assessment, testing should be done only according to case definition. Please do not go to the emergency department, or visit clinics unless those symptoms worsen. \n Please do a self-quarantine until the results of your analyses become available. \n Self-isolation means not going to public places, staying at home and not meeting visitors.\n Do not share personal items such as dishes, utensils, and towels, and wash your hands occasionally.</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="start_test">Start</string>
    <string name="test_label">Covid-19 test</string>
    <string name="total_deaths">Deaths</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="search_lang">en</string>
    <string name="countries_label">Countries</string>
    <string name="loading">Loading....</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_deaths">Today Deaths</string>
</resources>
