<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#FFEB3B">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/country_name"
            android:padding="6dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4">
            <TableRow>
                <TextView
                    android:text="@string/cases"
                    android:gravity="center"
                    android:background="#2196F3"
                    android:padding="3dp"/>
                <TextView
                    android:text="@string/deaths"
                    android:background="#F44336"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:text="@string/recovered"
                    android:background="#8BC34A"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:text="@string/today_cases"
                    android:background="#2196F3"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:text="@string/today_deaths"
                    android:background="#FF5722"
                    android:gravity="center"
                    android:padding="3dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/totalCasesNo"
                    android:background="#2196F3"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/deathsNo"
                    android:background="#F44336"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/recoveredNo"
                    android:background="#8BC34A"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/newCasesNo"
                    android:background="#2196F3"
                    android:gravity="center"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/newDeathsNo"
                    android:background="#FF5722"
                    android:gravity="center"
                    android:padding="3dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>